Fixing sonar findings